--- a/index.html
+++ b/index.html
@@ -50,32 +50,32 @@
 
       <div class="buttonLink">
         <a
-          href="https://github.com/"
+          href="https://www.zeit.de"
           target="blank"
           class="buttonLink__link card buttonLink__link-1"
         >
-          <i class="buttonLink__icon" data-feather="github"></i>
+          <i class="buttonLink__icon" data-feather="globe"></i>
         </a>
         <a
           target="blank"
-          href="https://outlook.live.com/mail/inbox"
+          href="https://accounts.google.com/ServiceLogin/signinchooser?service=mail&passive=true&rm=false&continue=https%3A%2F%2Fmail.google.com%2Fmail%2F&ss=1&scc=1&ltmpl=googlemail&emr=1&osid=1&flowName=GlifWebSignIn&flowEntry=ServiceLogin"
           class="buttonLink__link card buttonLink__link-2"
         >
           <i class="buttonLink__icon" data-feather="mail"></i>
         </a>
         <a
           target="blank"
-          href="https://calendar.google.com/calendar/r"
+          href="http://wetterstationen.meteomedia.de/?station=107260&wahl=vorhersage"
           class="buttonLink__link card buttonLink__link-3"
         >
-          <i class="buttonLink__icon" data-feather="calendar"></i>
+          <i class="buttonLink__icon" data-feather="umbrella"></i>
         </a>
         <a
           target="blank"
-          href="https://flipboard.com/"
+          href="http://ictwiki.ict.fraunhofer.de/index.php/Hauptseite"
           class="buttonLink__link card buttonLink__link-4"
         >
-          <i class="buttonLink__icon" data-feather="bookmark"></i>
+          <i class="buttonLink__icon" data-feather="briefcase"></i>
         </a>
         <a
           href="https://columns.app"
@@ -99,46 +99,55 @@
         <i class="list__head" data-feather="music"></i>
         <a
           target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          href="https://open.spotify.com/playlist/37i9dQZEVXcIvkmogGSYLm"
           class="list__link"
-          >Inspirational</a
+          >Weekly</a
         >
         <a
           target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          href="https://open.spotify.com/playlist/37i9dQZEVXbdWaeDUus2ku"
           class="list__link"
-          >Classic</a
+          >Release</a
         >
         <a
           target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          href="https://open.spotify.com/playlist/37i9dQZF1E38f9wDNi4Uf0"
           class="list__link"
-          >Oldies</a
+          >Metal</a
         >
         <a
           target="blank"
-          href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+          href="https://open.spotify.com/playlist/37i9dQZF1E39vrrOjYdK65"
           class="list__link"
-          >Rock</a
+          >*Core</a
+        >
+		<a
+          target="blank"
+          href="https://open.spotify.com/playlist/37i9dQZF1E3a8tB90Cyg0c"
+          class="list__link"
+          >Classics</a
         >
       </div>
 
       <div class="card list list__2">
         <i class="list__head" data-feather="coffee"></i>
-        <a href="https://www.linkedin.com" target="blank" class="list__link"
-          >LinkedIn</a
+        <a href="https://www.reddit.com" target="blank" class="list__link"
+          >Reddit</a
         >
-        <a href="https://dribbble.com/" target="blank" class="list__link"
-          >Dribble</a
+        <a href="https://lifehacker.com/" target="blank" class="list__link"
+          >Lifehacker</a
         >
-        <a href="https://www.udemy.com/" target="blank" class="list__link"
-          >Udemy</a
+        <a href="https://www.theverge.com" target="blank" class="list__link"
+          >The Verge</a
+        >
+		<a href="https://www.engadget.com" target="blank" class="list__link"
+          >Engadget</a
         >
         <a
-          href="https://www.figma.com/files/recent"
+          href="https://www.morecore.de"
           target="blank"
           class="list__link"
-          >Figma</a
+          >Morecore</a
         >
       </div>
     </div>
